syntax = "proto3";

package greeter;
option go_package = "github.com/shepheb/grpc-web-bazel-ts-example/proto/greeter";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}
